--- a/assets/styles/base/_fluid-responsive.scss
+++ b/assets/styles/base/_fluid-responsive.scss
@@ -1,28 +1,54 @@
-/* -------------------------------------------------------------------------- */
-/*                      Réglages size : fluid responsive                      */
-/* -------------------------------------------------------------------------- */
+// ====== ⚙️ [FLUID-RESPONSIVE] : réglage fluide des tailles ======
 
 // IDEA: Passer à un mixin @include fluid-type($min, $max, $scale)
 // pour rendre le fichier plus maintenable et lisible.
 
-// 1 de 1200px à 320px
-// Passage de 1.3rem à 0.75rem
-p,
-p.code,
-label,
-#submit-button,
-a,
-h3 {
+// =========================
+// 📏 INTRO-ANIMATION FONT-SIZE
+// =========================
+.intro-animation p.code {
   font-size: clamp(0.75rem, calc(0.75rem + ((1vw - 0.2rem) * 1)), 1.3rem);
   min-height: 0vw;
 }
-// Passage de 3rem à 1.7rem
-h1 {
-  font-size: clamp(1.7rem, calc(1.7rem + ((1vw - 0.2rem) * 2.3636)), 3rem);
-  min-height: 0vw;
+
+// =========================
+// 📏 HEADER FONT-SIZE
+// =========================
+header {
+  h1 {
+    font-size: clamp(1.7rem, calc(1.7rem + ((1vw - 0.2rem) * 2.3636)), 3rem);
+    min-height: 0vw;
+  }
+  h2 {
+    font-size: clamp(1.1rem, calc(1.1rem + ((1vw - 0.2rem) * 1.6364)), 2rem);
+    min-height: 0vw;
+  }
+  p {
+    font-size: clamp(0.75rem, calc(0.75rem + ((1vw - 0.2rem) * 1)), 1.3rem);
+    min-height: 0vw;
+  }
 }
-// Passage de 2rem à 1.1rem
-h2 {
-  font-size: clamp(1.1rem, calc(1.1rem + ((1vw - 0.2rem) * 1.6364)), 2rem);
-  min-height: 0vw;
+
+// =========================
+// 📏 FOLDER FONT-SIZE
+// =========================
+.folder {
+  h2 label {
+    font-size: clamp(1rem, calc(1rem + ((1vw - 0.2rem) * 0.7143)), 1.5rem);
+    min-height: 0vw;
+  }
+  h3 a {
+    font-size: clamp(1rem, calc(1rem + ((1vw - 0.2rem) * 0.7143)), 1.5rem);
+    min-height: 0vw;
+  }
+  p,
+  li,
+  a {
+    font-size: clamp(0.75rem, calc(0.75rem + ((1vw - 0.2rem) * 1)), 1.3rem);
+    min-height: 0vw;
+  }
+  p.code {
+    font-size: clamp(0.7rem, calc(0.7rem + ((1vw - 0.2rem) * 0.7143)), 1.2rem);
+    min-height: 0vw;
+  }
 }
