--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -3,11 +3,18 @@
 // Styles du header
 header {
   .header-text-container {
-    @include maxWidth(40px);
-    padding: 20px;
+    @include maxWidth;
+    margin: clamp(20px, calc(1.25rem + ((1vw - 3.2px) * 1.7857)), 30px) auto;
+    // à 1024px, 100% mais une margin fluid responsive
+    @include respond(desktop) {
+      width: 100%;
+      margin: clamp(5px, calc(0.3125rem + ((1vw - 3.2px) * 2.2321)), 30px) 0;
+    }
+    padding: clamp(20px, calc(1.25rem + ((1vw - 3.2px) * 1.7857)), 40px);
     h2 {
       color: $white;
-      padding: 30px 0;
+      // 📏 Padding Fluid-Responsive
+      padding: clamp(20px, calc(1.25rem + ((1vw - 3.2px) * 0.8929)), 30px) 0;
     }
   }
 }
