Ajout d'une max-width sur l'intro pour éviter que le texte se colle à gauche en mobile

--- a/assets/styles/intro.css
+++ b/assets/styles/intro.css
@@ -9,6 +9,12 @@
   padding: 10px;
 }
 
+@media screen and (max-width: 700px) {
+  .introText-container {
+    max-width: 90%;
+  }
+}
+
 /* ----------ANIMATIONS---------- */
 
 /* Création d'un curseur + Animation curseur */
