--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -130,12 +130,19 @@
     border-top-left-radius: 20px;
     padding-bottom: 10px;
     height: 60px;
+    position: relative;
   }
   .popup-title {
     font-size: 0.75rem;
   }
+  .popup-title h2 {
+    transform: translateX(30px);
+  }
   #burger {
-    display: inline;
+    display: block;
+    position: absolute;
+    left: 0;
+    transform: translateY(-3px);
     font-size: 1.5rem;
     cursor: pointer;
   }
