--- a/assets/styles/intro.css
+++ b/assets/styles/intro.css
@@ -11,7 +11,8 @@
 
 @media screen and (max-width: 700px) {
   .introText-container {
-    max-width: 88%;
+    /* max-width: 88%; */
+    max-width: 340px;
   }
 }
 
