--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -18,7 +18,7 @@
   aspect-ratio: 16/10;
   z-index: 100;
   border-radius: 20px;
-  box-shadow: 2px 2px 10px var(--transparent-light);
+  box-shadow: var(--shadow-color);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -39,10 +39,10 @@
   margin: 10px 5px;
 }
 .popup-sidebar .separator {
-  background-color: var(--transparent-light);
+  background-color: var(--transparent30);
 }
 .popup-content .separator {
-  background-color: var(--transparent-dark);
+  background-color: var(--transparent60);
 }
 /* Style légende de texte */
 .popup-content .status {
@@ -52,7 +52,7 @@
 /* Style de la barre de titre */
 .popup-header {
   grid-area: he;
-  background: var(--anthracite);
+  background: var(--neutral5);
   padding: 0 8px;
   border-top-right-radius: 20px;
   display: flex;
@@ -76,7 +76,7 @@
 /* Style de la sidebar */
 .popup-sidebar {
   grid-area: sb;
-  background: var(--darkgrey);
+  background: var(--neutral4);
   border-radius: 20px 0 0 20px;
 }
 .sidebar-container {
@@ -88,15 +88,15 @@
 .sidebar-container ul li:hover,
 .sidebar-container ul li:hover a {
   transform: scale(1.05);
-  background: var(--hover);
-  color: var(--anthracite);
+  background: var(--transparent30);
+  color: var(--color-text-primary);
   font-weight: bold;
 }
 
 /*Style du contenu */
 .popup-content {
   grid-area: co;
-  background: var(--lightgrey);
+  background: var(--neutral0);
   border-bottom-right-radius: 20px;
   overflow-y: auto;
 }
@@ -107,16 +107,16 @@
   padding-bottom: 10px;
 }
 .popup-content p {
-  color: var(--black);
+  color: var(--color-text-secondary);
   padding: 0;
 }
 .popup-content a {
-  color: var(--dark-color);
+  color: var(--color-accent-secondary);
   display: inline-block;
 }
 .popup-content a:hover {
   font-weight: bold;
-  color: var(--hover-dark-color);
+  color: var(--color-hover-secondary);
   transform: scale(1.05);
 }
 
@@ -177,14 +177,14 @@ form > div {
   gap: 10px;
 }
 form label {
-  font-family: var(--text);
+  font-family: var(--font-text);
 }
 input,
 textarea {
   background: transparent;
-  border: 1px solid var(--anthracite);
+  border: 1px solid var(--neutral4);
   border-radius: 5px;
-  font-family: var(--text);
+  font-family: var(--font-text);
   resize: none;
 }
 textarea {
@@ -193,12 +193,17 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  border: 1px solid var(--dark-color);
-  box-shadow: 0 0 5px var(--dark-color);
+  border: 1px solid var(--transparent90);
+  box-shadow: 0 0 5px var(--transparent90);
 }
 input[type='submit'] {
   padding: 5px 10px;
   border-radius: 5px;
-  background: var(--dark-color);
-  color: var(--white);
+  background: var(--transparent90);
+  color: var(--color-text-secondary);
+}
+input[type='submit']:hover {
+  background: var(--color-hover-secondary);
+  transform: scale(1.05);
+  font-weight: bold;
 }
