--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,43 +1,5 @@
-/* *----------FONTS----------* */
-@font-face {
-  font-family: 'Orbitron';
-  src: url(../fonts/Orbitron-VariableFont_wght.ttf);
-  font-display: swap;
-}
-@font-face {
-  font-family: 'IBM Plex Sans';
-  src: url(../fonts/IBMPlexSans-VariableFont_wdth-wght.ttf);
-  font-display: swap;
-}
-@font-face {
-  font-family: 'JetBrains Mono';
-  src: url(../fonts/JetBrainsMono-VariableFont_wght.ttf);
-  font-display: swap;
-}
-
-/* *----------VARIABLES----------* */
-:root {
-  /* Fonts */
-  --title: 'Orbitron', fantasy;
-  --text: 'IBM Plex Sans', sans-serif;
-  --code: 'JetBrains Mono', monospace;
-
-  /* Palette principale */
-  --black: #0d0d0d;
-  --anthracite: #2d2d2d;
-  --darkgrey: #2d3738;
-  --grey: #718c8d;
-  --lightgrey: #dbdbdb;
-  --white: #efeeee;
-  --principal: #39ff14;
-
-  /* Variations de couleur */
-  --hover: #bcffb0f3;
-  --dark-color: #1f7110;
-  --hover-dark-color: #2a9716;
-  --transparent-light: #39ff14af;
-  --transparent-dark: #258a13af;
-}
+/* *----------IMPORT DES VARIABLES----------* */
+@import url('_variables.css');
 
 /* *----------PARAMETRES GENERAUX----------* */
 *,
@@ -51,7 +13,7 @@
 body {
   width: 100dvw;
   height: 100dvh;
-  background: var(--black);
+  background: var(--background-color-primary);
   overflow-x: hidden;
 }
 
@@ -63,34 +25,34 @@ a,
 a:visited,
 .link {
   text-decoration: none;
-  color: var(--principal);
-  font-family: var(--text);
+  color: var(--color-accent-primary);
+  font-family: var(--font-text);
 }
 
 .titre {
-  font-family: var(--title);
+  font-family: var(--font-title);
 }
 
 h1 {
-  color: var(--principal);
+  color: var(--color-accent-primary);
   font-weight: 800;
 }
 
 h2 {
-  color: var(--white);
+  color: var(--color-text-primary);
   font-weight: 700;
   padding: clamp(20px, 1.25rem + (1vw - 3.2px) * 0.8929, 30px) 0;
 }
 
 p {
-  color: var(--white);
-  font-family: var(--text);
+  color: var(--color-text-primary);
+  font-family: var(--font-text);
   padding: 5px 0;
 }
 
 .code {
-  color: var(--white);
-  font-family: var(--code);
+  color: var(--color-text-primary);
+  font-family: var(--font-code);
 }
 
 /* *----------STYLE DU HEADER----------* */
@@ -137,7 +99,7 @@ p {
   transform: scale(1.05);
 }
 .desktop-icons-container > div:hover img {
-  box-shadow: 0 0 5px var(--principal);
+  box-shadow: var(--shadow-color);
 }
 .desktop-icons-container img {
   width: 60px;
